test_scripts/errors/add_int_and_str.stderr
 1 | 1 + "test";
       ^
Error: Operation '+' not supported between 1 and test
